--- a/package.json
+++ b/package.json
@@ -8,22 +8,32 @@
     "dev": "nodemon server.js",
     "test": "jest"
   },
-  "keywords": ["dental", "bot", "whatsapp", "appointments", "automation"],
+  "keywords": [
+    "dental",
+    "bot",
+    "whatsapp",
+    "appointments",
+    "automation"
+  ],
   "author": "Joel Anchondo",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.3",
-    "twilio": "^4.18.0",
-    "dotenv": "^16.3.1",
+    "@anthropic-ai/sdk": "^0.71.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.10",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "moment": "^2.29.4"
+    "helmet": "^7.1.0",
+    "mercadopago": "^2.10.0",
+    "moment": "^2.29.4",
+    "mongoose": "^8.0.3",
+    "stripe": "^19.3.1",
+    "twilio": "^4.18.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
