--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^7.1.0",
     "mercadopago": "^2.10.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.0.3",
     "stripe": "^19.3.1",
     "twilio": "^4.18.0"
